--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
-.App {
-  text-align: center;
+.header {
+  margin: 0 auto;
+  max-width: 1900px;
+  display: flex;
+  font-family: Helvetica, sans-serif;
+  font-size: 48px;
+  font-weight: 100;
+  align-items: center;
+
+  border-bottom: 1px solid #e5e5e5;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.logo {
+  margin-left: 110px;
+  margin-top: 60px;
+  margin-right: 65px;
+  height: 80px;
+  width: auto;
+  margin-bottom: 50px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  max-width: 1200px;
+  height: 1356px;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
+
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+
+.btnHaut {
+  display: flex;
+  margin-bottom: 40px;
+  gap: 20px;
+}
+.moins,
+.plus {
+  font-family: Helvetica, sans-serif;
+  width: 150;
+  margin-left: 30px;
+  margin-right: 30px;
+  border: none;
+  background-color: white;
+}
+
+span {
+  border-radius: 15px;
+  background-color: #5c48d3;
+  padding: 150px;
+  font-size: 96px;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.reset {
+  border: none;
+  height: 60px;
+  width: 150px;
+  border-radius: 15px;
+  font-size: 32px;
+  background-color: #5c48d3;
+  color: white;
 }
