--- a/src/App.css
+++ b/src/App.css
@@ -19,24 +19,21 @@
   margin-bottom: 50px;
 }
 .counter {
+  display: inline-block;
   border-radius: 15px;
   background-color: #5c48d3;
   padding: 150px;
   font-size: 96px;
   color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 .container {
-  max-width: 1200px;
-  height: 1356px;
+  max-width: 100vw;
+  height: 100vwx;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-
-  left: 30vw;
-  top: 55vw;
+  justify-content: center;
+  align-items: center;
 }
 
 .btnHaut {
@@ -47,10 +44,6 @@
   gap: 20px;
 }
 
-.btnBas {
-  display: flex;
-  justify-content: center;
-}
 .moins,
 .plus {
   font-family: Helvetica, sans-serif;
@@ -62,6 +55,7 @@
 }
 
 footer {
+  margin-top: 10vw;
   display: flex;
   justify-content: center;
 }
